# Xcontext

./: Cargo.toml  README.org  Rakefile  VISION.org  handling-large-codebases.org
cli/: Cargo.toml  cli.rs  cli_args.rs  commands.rs  output.rs  watch.rs
cli/commands/: completion.rs  config.rs  debug.rs  generate.rs  metrics.rs  quick.rs  show.rs
core/: Cargo.toml  build.rs  chunking.rs  config.rs  context.rs  core.rs  error.rs  gather.rs  output_formats.rs  rules.rs  system.rs
core/rules/: mapping.rs
data/: ai_readme.yaml  builtin_ignores.yaml  prompts.yaml
data/rules/: c.org  config_file.org  cpp.org  documentation.org  general.org  go.org  guidelines.org  javascript.org  php.org  rakefile.org  ruby.org  rust.org
samples/: xcontext_project.json
samples/chunks/: xcontext.json  xcontext_chunk_1.json  xcontext_chunk_10.json  xcontext_chunk_2.json  xcontext_chunk_3.json  xcontext_chunk_4.json  xcontext_chunk_5.json  xcontext_chunk_6.json  xcontext_chunk_7.json  xcontext_chunk_8.json  xcontext_chunk_9.json
