[workspace]
resolver = "2"
members = [
    "core",
    "cli",
]

[workspace.dependencies]
anyhow = "1.0.97"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
toml = "0.8.20"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
indexmap = { version = "2.9.0", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
colored = "2.0" # Updated to 2.0, check compatibility if issues arise
env_logger = "0.11.8"
ignore = "0.4.23"
walkdir = "2.5.0"
globset = "0.4.16"
rust-embed = "8.7.0"
quick-xml = { version = "0.37.4", features = ["serde", "serialize"] }
sysinfo = "0.34.2"
byte-unit = { version = "5.1.6", features = ["serde"] }
tiktoken-rs = "0.6.0"
pathdiff = "0.2.3"
shellexpand = "3.1.1"
once_cell = "1.21.3"
comfy-table = "7.1.4"
dirs = "6.0.0"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
clap_complete = "4.5.47"
clearscreen = "4.0.1"
parse_duration = "2.1.1"
rayon = "1.10.0" # Added from original src/context/gather.rs
