[package]
name = "xcontext-cli"
version = "0.1.0"
edition = "2024"                           # Assuming 2024 edition, adjust if needed
description = "CLI interface for xcontext"
license = "GPL-3.0-or-later"
publish = false

[[bin]]
name = "xcontext"
path = "cli.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
toml = { workspace = true }       # Added
pathdiff = { workspace = true }   # Added
rayon = { workspace = true }      # Added
ignore = { workspace = true }     # Added

# Local Core Crate
xcontext-core = { path = "../core" }

# CLI specific dependencies (from workspace or direct)
clap_complete = { workspace = true }
clearscreen = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
quick-xml = { workspace = true }
tiktoken-rs = { workspace = true }
byte-unit = { workspace = true }

# Direct dependencies (if not in workspace)
glob = "0.3" # Added: needed for quick command (specify version)
