[package]
name = "xcontext-core"
version = "0.1.0"
edition = "2024"
description = "Core context generation logic for xcontext"
license = "GPL-3.0-or-later"
publish = false

[lib]
name = "xcontext_core"
path = "core.rs"

[features]
default = ["serde_support"]
serde_support = ["dep:serde", "dep:chrono", "dep:indexmap", "dep:byte-unit", "dep:quick-xml"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
byte-unit = { workspace = true, optional = true }
ignore = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
rust-embed = { workspace = true }
quick-xml = { workspace = true, optional = true }
sysinfo = { workspace = true }
tiktoken-rs = { workspace = true }
pathdiff = { workspace = true }
shellexpand = { workspace = true }
once_cell = { workspace = true }
colored = { workspace = true } # For internal logging/warnings if needed
rayon = { workspace = true }
parse_duration = { workspace = true } # Added from original src/config.rs
